@@ -1,3 +1,8 @@
+	-- Fixed a bug whereunder PoolBackedDataSources threw an Exception
+	   trying to bind per-user overrides that properly should be bound
+	   only to WrapperConnectionPoolDataSource (or to ComboPooledDataSource,
+	   which wraps that). Many thanks to Walter Marcelo Pedrozo Barboza
+	   for calling attention to this issue.
 c3p0-0.9.2-pre4
 	-- Fixed broken version on Maven dependency to mchange-commons-java.
 	   Version was hardcoded, now uses version number that c3p0 was built
